--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive page -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">  VIEWPORT DOESN'T WORK HERE--> 
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/23325f0d76.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,14 +21,14 @@
             </div>
             <div class="bannerText">
                 <div id="sect1">
-                    <h1>Reserve a stay. Welcome the travellers. Directly on Airbnb</h1>
+                    <h1>Book a trip. Host travellers. All on Airbnb</h1>
                 </div>
                 <div id="sect2">
                     <div id="sect2a">
-                        <p>Find a place and activities</p><button id="button1"><strong>Explore</strong></button>
+                        <p>Find placec to stay and things to do</p><button id="button1"><strong>Explore</strong></button>
                     </div>
                     <div id="sect2b">
-                        <p>Reserve a stay</p><button id="button2"><strong>Host</strong></button>
+                        <p>Earn money from your extra space</p><button id="button2"><strong>Host</strong></button>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <div id=sect3a>
                         <div class="sect3b">
                             <p>where</p>
-                            <input type="text" value="Anywhere" style="color:rgb(202, 198, 198)">
+                            <input type="text" value="Anywhere" style="color:rgb(90, 87, 87)">
                         </div>
                         <div class="sect3b">
                             <p>ARRIVAL</p>
@@ -121,9 +121,9 @@
                             </div>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sequi ex nihil mollitia sit quis debitis sunt error, tempora cupiditate.</p>
                             <div class="profile">
-                                <img src="./images/AlexPic.jpg" alt="pic" width="25px" height="25px">
-                                <p><strong>Beatrice, </strong></p>
-                                <p>France</p>
+                                <img src="./images/mimi.jpg" alt="pic" width="25px" height="25px">
+                                <p><strong>Mimi, </strong></p>
+                                <p>Bulgaria</p>
                             </div>
                         </div>
                     </div>
@@ -229,38 +229,49 @@
             <div class="footer1a">
                 <strong>Airbnb</strong> <br>
                 <a href="#">Careers</a>
+                <a href="#">News</a>
+                <a href="#">Policies</a>
                 <a href="#">Help</a>
-                <a href="#">Business coordinates</a>
+                <a href="#">DIversity & Belonging</a>
             </div>
             <div class="footer1a">
                 <strong>Discover</strong> <br>
-                <a href="#"> Guides</a>
-                <a href="#"> Organise an experience</a>
+                <a href="#"> Trust & Safety</a>
+                <a href="#"> Travel Credit</a>
+                <a href="#"> Gift Cards</a>
+                <a href="#"> Airbnb Citizen</a>
+                <a href="#"> Business Travel</a>
+                <a href="#">Guidebooks</a>
                 <a href="#">Airbnbmag</a>
             </div>
             <div class="footer1a">
-                    <strong>Home Stays</strong> <br>
-                    <a href="#"> Guides</a>
-                    <a href="#"> Organise an experience</a>
+                    <strong>Why Hosting</strong> <br>
+                    <a href="#">Why Host</a>
+                    <a href="#">Hospitality</a>
+                    <a href="#">Responsible Hosting</a>
+                    <a href="#">Host an Experience</a>
                     <p id="new">New</p>
-                    <a href="#">Airbnbmag</a>
-                </div>
+                    <a href="#">Open Homes</a>
+            </div>
             <div class="footer1a">
                  <div class="social">
                     <a  href="#"><i class="fab fa-facebook-f"></i></a>
                     <a  href="#"><i class="fab fa-twitter"></i></a>
                     <a  href="#"><i class="fab fa-instagram"></i></a>
                 </div>
-                <a href="#">Conditions</a>
+                <a href="#">Terms</a>
+                <a href="#">Privacy</a>
                 <a href="#">Site plan</a>
             </div>
         </div>
         <div class="footnote">
-            <i class="fab fa-airbnb"></i> <i class="far fa-copyright"></i>
+            <div class="footnoteA">
+                <i class="fab fa-airbnb"></i> 
+                <i class="far fa-copyright"></i>
+            </div>
             <p>Airbnb, Inc. All rights reserved</p>
         </div>
     </div>
   </div>
 </body>
-
 </html>
